emqx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: emqx-service
  namespace: demo-1
spec:
  selector:
    app: emqx
  ports:
  - name: mqtt
    protocol: TCP
    port: 1883
    targetPort: 1883
  - name: mqtt-tls
    protocol: TCP
    port: 8883
    targetPort: 8883
  - name: mqtt-http
    protocol: TCP
    port: 8083
    targetPort: 8083
  - name: emqx-dashboard
    protocol: TCP
    port: 18083
    targetPort: 18083
