service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: demo-1
  name: demo-static-website-service
spec:
  selector:
    app: demo-static-website
    env: demo
  ports:
  - port: 80
    targetPort: 80
